[gd_scene load_steps=10 format=3 uid="uid://cn321032rk0o1"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_ljt4j"]
[ext_resource type="Texture2D" uid="uid://bwab3atf26365" path="res://assets/texture/options_menu.tres" id="2_6n7vl"]
[ext_resource type="Texture2D" uid="uid://dqh5db3rwloxw" path="res://assets/sprite/PNG/Default/tile_cloud.png" id="3_wh3ae"]
[ext_resource type="FontFile" uid="uid://d2um1g7tuuta4" path="res://assets/fonts/Madimi_One/MadimiOne-Regular.ttf" id="4_xc7n7"]
[ext_resource type="AudioStream" uid="uid://b8no8f8watl86" path="res://assets/sfx/click.wav" id="5_yu87d"]
[ext_resource type="Theme" uid="uid://e1cukr0ffdpe" path="res://assets/texture/menu.tres" id="6_6ku5v"]

[sub_resource type="LabelSettings" id="LabelSettings_t5aq1"]
font = ExtResource("4_xc7n7")
font_size = 70
outline_size = 1
shadow_size = 20
shadow_color = Color(0.139184, 0.351246, 0.332102, 0.682353)

[sub_resource type="SpriteFrames" id="SpriteFrames_v1e5q"]
animations = [{
"frames": [],
"loop": true,
"name": &"level_1",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"level_2",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"level_3",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"level_4",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_dcjgm"]
font = ExtResource("4_xc7n7")
font_size = 50
outline_size = 1
shadow_size = 20
shadow_color = Color(0.139184, 0.351246, 0.332102, 0.682353)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljt4j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 816.0
offset_bottom = 488.0
scale = Vector2(1.0051, 0.995511)
texture = ExtResource("2_6n7vl")

[node name="TileCloud2" type="Sprite2D" parent="TextureRect"]
position = Vector2(457.665, 40.1804)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_wh3ae")

[node name="TileCloud2" type="Sprite2D" parent="TextureRect/TileCloud2"]
position = Vector2(-18.4, 49.2308)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_wh3ae")

[node name="TileCloud3" type="Sprite2D" parent="TextureRect"]
position = Vector2(35.8172, 40.1804)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_wh3ae")

[node name="TileCloud2" type="Sprite2D" parent="TextureRect/TileCloud3"]
position = Vector2(-18.4, 49.2308)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_wh3ae")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 30.0
offset_right = 427.0
offset_bottom = 123.0
text = "SHAPESHIFT"
label_settings = SubResource("LabelSettings_t5aq1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yu87d")
bus = &"SFX"

[node name="Level1" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 192.0
offset_right = 257.0
offset_bottom = 256.0
text = "1"

[node name="Label" type="Label" parent="Level1"]
layout_mode = 0
offset_left = -8.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = -1.0
text = "
"

[node name="Level2" type="Button" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 192.0
offset_right = 385.0
offset_bottom = 256.0
text = "2"

[node name="Label" type="Label" parent="Level2"]
layout_mode = 0
offset_left = -8.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = -1.0

[node name="Level3" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 192.0
offset_right = 513.0
offset_bottom = 256.0
text = "3"

[node name="Label" type="Label" parent="Level3"]
layout_mode = 0
offset_left = -8.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = -1.0

[node name="Level4" type="Button" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 192.0
offset_right = 641.0
offset_bottom = 256.0
text = "4"

[node name="Label" type="Label" parent="Level4"]
layout_mode = 0
offset_left = -8.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = -1.0

[node name="Level5" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 280.0
offset_right = 257.0
offset_bottom = 344.0
text = "5
"

[node name="Label" type="Label" parent="Level5"]
layout_mode = 0
offset_left = -8.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = -1.0

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 664.0
offset_top = 416.0
offset_right = 762.0
offset_bottom = 461.0
theme = ExtResource("6_6ku5v")
text = "BACK
"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(696, 104)
sprite_frames = SubResource("SpriteFrames_v1e5q")
animation = &"level_4"

[node name="Title2" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 112.0
offset_right = 600.0
offset_bottom = 179.0
text = "LEVEL SELECT"
label_settings = SubResource("LabelSettings_dcjgm")

[connection signal="mouse_entered" from="Level1" to="." method="_on_level_1_mouse_entered"]
[connection signal="mouse_exited" from="Level1" to="." method="_on_level_1_mouse_exited"]
[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="mouse_entered" from="Level2" to="." method="_on_level_2_mouse_entered"]
[connection signal="mouse_exited" from="Level2" to="." method="_on_level_2_mouse_exited"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="mouse_entered" from="Level3" to="." method="_on_level_3_mouse_entered"]
[connection signal="mouse_exited" from="Level3" to="." method="_on_level_3_mouse_exited"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="mouse_entered" from="Level4" to="." method="_on_level_4_mouse_entered"]
[connection signal="mouse_exited" from="Level4" to="." method="_on_level_4_mouse_exited"]
[connection signal="pressed" from="Level4" to="." method="_on_level_4_pressed"]
[connection signal="mouse_entered" from="Level5" to="." method="_on_level_5_mouse_entered"]
[connection signal="mouse_exited" from="Level5" to="." method="_on_level_5_mouse_exited"]
[connection signal="pressed" from="Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
